test/conformance/chainsaw/validate/clusterpolicy/cornercases/different-configuration-for-actions/bad-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-ns-1
  labels:
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: bad-ns-2
