test/conformance/chainsaw/validate/clusterpolicy/cornercases/different-configuration-for-actions/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-ns-labels
spec:
  validationFailureAction: Audit
  rules:
  - name: require-ns-purpose-label
    match:
      any:
      - resources:
          kinds:
          - Namespace
    validate:
      failureAction: Enforce
      message: "You must have label `purpose` with value `production` set on all new namespaces."
      pattern:
        metadata:
          labels:
            purpose: production
  - name: require-ns-env-label
    match:
      any:
      - resources:
          kinds:
          - Namespace
    validate:
      message: "You must have label `environment` with value `production` set on all new namespaces."
      pattern:
        metadata:
          labels:
            environment: production
