test/conformance/chainsaw/validate/clusterpolicy/cornercases/different-configuration-for-actions/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-ns-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
